# JukeBox

./: Cargo.toml  MIGRATION_PLAN.md  PLAN.md  PLAN_metadata_search.md  config.toml
loop-editor/: Cargo.toml  build.rs  loops.json  shortcuts.json
loop-editor/src/: app.rs  loops.rs  main.rs  shortcuts.rs  waveform.rs  waveform_player.rs
src/: config.rs  main.rs  models.rs  player.rs  scanner.rs  search.rs  ui.rs  waveform.rs  waveform_player.rs
src/ui/: app.rs  edit.rs  mod.rs  navigation.rs  render.rs  shortcuts.rs  types.rs
