[package]
name = "loop-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
rodio = { version = "0.19", features = ["symphonia-all"] }
symphonia = "0.5"
rubato = "0.15"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
