[package]
name = "loop-editor"
version = "0.1.0"
edition = "2021"

[features]
default = []
rubberband = []

[build-dependencies]
cc = "1"

[dependencies]
eframe = "0.28"
rodio = { version = "0.19", features = ["symphonia-all"] }
symphonia = "0.5"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
soundtouch = "0.5.4"
rustfft = "6.2"

[workspace]
